--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -3,4 +3,9 @@ footer {
         text-align: center;
         height: 60px;
         width: 100%;
-        }
+        position: absolute;
+	bottom: 0;
+	display: table;}
+footer div {
+    display: table-cell;
+    vertical-align: middle;}
